--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "axios": "^0.19.0",
+    "axios-hooks": "^1.6.0",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
